--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,10 @@
         <span class="site-description">{{site.user_title}}</span>
       </h2>
       <div class="icons-header">
-        <a aria-label="Github Profile" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
-	<a aria-label="Quora Profile" target="_blank" href="https://www.quora.com/profile/{{site.quora_username}}"><i class="icon fa fa-quora-alt" aria-hidden="true"></i></a>
-	<a aria-label="Imdb Ratings" target="_blank" href="http://www.imdb.com/user/{{site.imdb_username}}/ratings"><i class="icon fa fa-imdb-alt" aria-hidden="true"></i></a>
-	<a aria-label="Facebook Profile" target="_blank" href="https://www.facebook.com/{{site.facebook_username}}"><i class="icon fa fa-facebook-alt" aria-hidden="true"></i></a>
+        <a aria-label="Github Profile" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github" aria-hidden="true"></i></a>
+	<a aria-label="Quora Profile" target="_blank" href="https://www.quora.com/profile/{{site.quora_username}}"><i class="icon fa fa-quora" aria-hidden="true"></i></a>
+	<a aria-label="Imdb Ratings" target="_blank" href="http://www.imdb.com/user/{{site.imdb_username}}/ratings"><i class="icon fa fa-imdb" aria-hidden="true"></i></a>
+	<a aria-label="Facebook Profile" target="_blank" href="https://www.facebook.com/{{site.facebook_username}}"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
       </div>
   </div>
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
