--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,21 @@
 <div id="particles-js">
+
   <div class="content">
+
       <h2>
         <span class="site-title">{{site.username}}</span>
-        <span class="site-description">{{site.user_title}}</span>
+        <span class="site-description">{{site.user_description}}</span>
       </h2>
+
       <div class="icons-header">
         <a aria-label="Github Profile" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github" aria-hidden="true"></i></a>
-	<a aria-label="Quora Profile" target="_blank" href="https://www.quora.com/profile/{{site.quora_username}}"><i class="icon fa fa-quora" aria-hidden="true"></i></a>
-	<a aria-label="Imdb Ratings" target="_blank" href="http://www.imdb.com/user/{{site.imdb_username}}/ratings"><i class="icon fa fa-imdb" aria-hidden="true"></i></a>
-	<a aria-label="Facebook Profile" target="_blank" href="https://www.facebook.com/{{site.facebook_username}}"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
+		<a aria-label="Quora Profile" target="_blank" href="https://www.quora.com/profile/{{site.quora_username}}"><i class="icon fa fa-quora" aria-hidden="true"></i></a>
+		<a aria-label="Imdb Ratings" target="_blank" href="http://www.imdb.com/user/{{site.imdb_username}}/ratings"><i class="icon fa fa-imdb" aria-hidden="true"></i></a>
+		<a aria-label="Facebook Profile" target="_blank" href="https://www.facebook.com/{{site.facebook_username}}"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
       </div>
+
   </div>
+
   <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
+
 </div>
