--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,10 +8,17 @@
       </h2>
 
       <div class="icons-header">
+
         <a aria-label="Github Profile" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github" aria-hidden="true"></i></a>
+	
 		<a aria-label="Quora Profile" target="_blank" href="https://www.quora.com/profile/{{site.quora_username}}"><i class="icon fa fa-quora" aria-hidden="true"></i></a>
+	
 		<a aria-label="Imdb Ratings" target="_blank" href="http://www.imdb.com/user/{{site.imdb_username}}/ratings"><i class="icon fa fa-imdb" aria-hidden="true"></i></a>
+	
 		<a aria-label="Facebook Profile" target="_blank" href="https://www.facebook.com/{{site.facebook_username}}"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
+
+		<a aria-label="CodeChef Profile" target="_blank" href="https://www.codechef.com/users/iavanish"><img src="assets/img/codechef.png" aria-hidden="true"></img></a>
+
       </div>
 
   </div>
