--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,15 +9,41 @@
 
       <div class="icons-header">
 
-        <a aria-label="Github Profile" target="_blank" href="https://github.com/{{site.github_username}}"><i class="icon fa fa-github" aria-hidden="true"></i></a>
-	
-		<a aria-label="Quora Profile" target="_blank" href="https://www.quora.com/profile/{{site.quora_username}}"><i class="icon fa fa-quora" aria-hidden="true"></i></a>
-	
-		<a aria-label="Imdb Ratings" target="_blank" href="http://www.imdb.com/user/{{site.imdb_username}}/ratings"><i class="icon fa fa-imdb" aria-hidden="true"></i></a>
-	
-		<a aria-label="Facebook Profile" target="_blank" href="https://www.facebook.com/{{site.facebook_username}}"><i class="icon fa fa-facebook" aria-hidden="true"></i></a>
+      	<table cellspacing="0" cellpadding="0">
 
-		<a aria-label="CodeChef Profile" target="_blank" href="https://www.codechef.com/users/iavanish"><img src="assets/img/codechef.png" aria-hidden="true"></img></a>
+      	<tr>
+
+      	<th>
+      	<a aria-label="Github Profile" target="_blank" href="https://github.com/{{site.github_username}}"><img src="assets/img/github.png" aria-hidden="true"></img></a>
+      	</th>
+
+      	<th>
+      	<a aria-label="CodeChef Profile" target="_blank" href="https://www.codechef.com/users/iavanish"><img src="assets/img/codechef.png" aria-hidden="true"></img></a>
+      	</th>
+
+      	<th>
+        <a aria-label="StackOverflow Profile" target="_blank" href="http://stackoverflow.com/users/6674146/iavanish"><img src="assets/img/stackoverflow.svg" aria-hidden="true"></img></a>
+        </th>
+
+        <th>
+        <a aria-label="LinkedIn Profile" target="_blank" href="https://www.linkedin.com/in/iavanish"><img src="assets/img/linkedin.svg" aria-hidden="true"></img></a>
+        </th>
+	
+		<th>
+		<a aria-label="Quora Profile" target="_blank" href="https://www.quora.com/profile/{{site.quora_username}}"><img src="assets/img/quora.png" aria-hidden="true"></img></a>
+		</th>
+	
+		<th>
+		<a aria-label="Imdb Ratings" target="_blank" href="http://www.imdb.com/user/{{site.imdb_username}}/ratings"><img src="assets/img/imdb.png" aria-hidden="true"></img></a>
+		</th>
+		
+		<th>
+		<a aria-label="Facebook Profile" target="_blank" href="https://www.facebook.com/{{site.facebook_username}}"><img src="assets/img/facebook.svg" aria-hidden="true"></img></a>
+		</th>
+
+		</tr>
+
+		</table>
 
       </div>
 
